# uwasm-vm

./: .gitignore  AUTHORS.md  CMakeLists.txt  README.md  build.sh
ci/: Dockerfile  analyze.sh  ci.yml  configure.sh  cti.sh  sanity.sh  setup-env.sh  test.sh  w2u.sh
cmake/: uvm-m32.cmake
doc/: ISA.md  convert2def.bat  convert2def.py  convert2def.sh  design.md  design_concerns.md  external_func.md  inst_encode.xlsx  u_opcode_list.csv  ubh.xlsx
include/: u_am.h  u_types.h
include/encoder/: u_encoder.h
include/ubh/: ubh.h
include/uvm/: uvm.h
libs/gtest/lib/cmake/GTest/: GTestTargets.cmake
libs/gtest/lib/pkgconfig/: gtest.pc  gtest_main.pc
libs/libffi/lib/: libffi.la  libffi.so.8.1.0
libs/libffi/lib/pkgconfig/: libffi.pc
libs/libffi32/include/: ffi.h
libs/libffi32/lib/: libffi.la  libffi.so.8.1.0
libs/libffi32/lib/pkgconfig/: libffi.pc
libs/libffi32/share/info/: dir  libffi.info
src/: main.cxx
src/encoder/: u_encoder.cxx  u_inst_encoder.cxx  u_inst_encoder.h  u_type_encoder.cxx  u_type_encoder.h
src/interpreter/: exec_debug.cxx  exec_debug.h  exec_unit.cxx  exec_unit.h  exec_unit_func.h  exec_unit_op.def  u_func_list.def  uwasm_malloc.cxx  uwasm_malloc.h
src/runtime/: exec_system.cxx  exec_system.h  u_runtime.cxx  u_runtime.h  u_runtime_reg.h
src/static_linker/: u_sld.cxx  u_sld.h
src/trace/: exec_perf.h  u_trace.cxx  u_trace.h
src/ubh/: u_builtin_list.def  u_diff_type.def  u_inst.cxx  u_inst.h  u_inst_name.cxx  u_module.cxx  u_module.h  u_opcode.cxx  u_opcode.h  u_opcode_list.def  u_opcode_list_l.def  ubh.cxx
src/utilities/: u_str_tab.cxx  u_str_tab.h  u_utils.cxx  u_utils.h
src/wasm/: conv_map.cxx  conv_map.h  conv_trace.h  converter.cxx  converter.h  local_table.h  op_enum.h  op_map.h  op_short_long_map.h  reader.cxx  reader.h  type_enum.cxx  type_enum.h  type_enum_base.h  u_leb128.h  wasm_config.h  winst.cxx  winst.h  winst_opcode_list.h
tests/: .gitignore  expected.json  run_build.sh  run_test.py
tests/as/: .gitignore  arr01.ts  fruits2.ts  fruits2.wasm  fruits2.wat  object.ts
tests/as/add/: add.c  add.s
tests/as/cgfib/: cgfib.c  cgfib1.testcmd  cgfib2.c  cgfib2.testcmd
tests/as/fib/: fib.0.testcmd  fib.2.testcmd  fib.4.testcmd  fib.testcmd  fib2.ts  fib2.wasm  fib2.wat
tests/as/fib3/: fib3.ts  fib3.uwasm  fib3.wasm
tests/as/fruits/: string.ts  string.wasm  string.wat
tests/binary/tfjs_backend/: tfjs_backend_uwasm.s  tfjs_backend_uwasm.uwm
tests/code-only/: convert.sh
tests/code-only/uwasm/: output.inst  test1.hex
tests/code-only/wasm/: bin_temp  bin_temp_3  int_temp  int_temp_3  test.wasm  test.wasm.text  test.wat
tests/sanity/: calls.cxx  fab.js  t-add.cxx  t-and.cxx  t-conv.cxx  t-div.cxx  t-mul.cxx  t-sub.cxx  tcall-malloc.c  tcall-putchar.c  trecurse.cxx  uwasm_alu.c  uwasm_br.c  uwasm_br_func.c  uwasm_br_lp.c  uwasm_func.c  uwasm_gl.c  uwasm_gl_br.c  uwasm_gl_br_func.c  uwasm_lp.c  uwasm_pr.c
tests/simple/: as_for01.ts  as_for01.wat  as_for02.ts  as_for02.wat  as_if01.ts  as_if01.wasm  as_if01.wat  call.uwasm  call.wasm  call.wat  const_add.wasm  const_add.wast  converting.sh  demo_ctrl01.wap  demo_ctrl01.wasm  demo_ctrl01.wat  demo_ctrl02.wap  demo_ctrl02.wasm  demo_ctrl02.wat  demo_ctrl03.wap  demo_ctrl03.wasm  demo_ctrl03.wat  discuss_loop01.wat  load_store_01.wasm  load_store_01.wast  local.wasm  local.wasm2  local.wat  studio01.c  subtract.wasm  subtract.wat  temp.wat
tests/spec/: call.wast  if02.wat
tests/unit/: encoder_test.cxx  exec_service_test.cxx  main.cxx  uvm_api_test.cxx  uvm_api_test_cxx.cxx
tests/wasm/: call01.cxx  call02.cxx  call03.cxx  call04.cxx
